<resources>
    <string name="app_name">VMusic</string>

    <!--首页 本地音乐-->
    <string name="local_music">本地音乐</string>
    <string name="default_music_num">0首</string>
    <string name="music_download">歌曲下载</string>
    <string name="default_music_download">没有下载任务</string>
    <string name="mv_download">MV下载</string>
    <string name="recent_play_music">最近播放</string>
    <string name="my_favor">我的收藏</string>
    <string name="my_create_songlist">我创建的歌单</string>
    <string name="my_favor_title">我的最爱</string>
    <string name="default_music_count">0个</string>
    <string name="favor_song_list">收藏的歌单</string>
    <string name="create_new_song_list">点击新建歌单</string>
    <string name="create">新建</string>
    <string name="manager">管理</string>

    <string name="hot_search">热门搜索</string>
    <string name="history_search">历史搜索</string>

    <string name="mode_repeat_single">单曲循环</string>
    <string name="mode_repeat">列表循环</string>
    <string name="mode_sequential">顺序播放</string>
    <string name="mode_shuffle">随机播放</string>


    <string name="shuffe_play">随机播放全部</string>
    <string name="manager_song">管理</string>


    <string name="album_detail_title">专辑信息</string>
    <string name="album_detail_album_name">专辑名:</string>
    <string name="album_detail_publish_date">发行日期:</string>
    <string name="album_detail_type">类型:</string>
    <string name="album_detail_lang">语言:</string>
    <string name="album_detail_company">发行公司:</string>

    <string name="album_detail_produce_title">专辑简介</string>

    <string name="options_favor">收藏</string>
    <string name="options_add_song_list">加入歌单</string>
    <string name="options_delete">删除</string>
    <string name="options_share">分享</string>
    <string name="options_download">下载</string>
    <string name="options_play_next">插队播放</string>
    <string name="options_singer">查看歌手</string>
    <string name="options_album">查看专辑</string>
    <string name="options_comment">评论</string>
    <string name="options_info">歌曲信息</string>
    <string name="options_cancel">取消</string>

</resources>
