<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_detail_title"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/base_text_size"/>

    <TextView
        android:id="@+id/album_info_fragment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_detail_album_name"
        android:textSize="@dimen/base_text_size_small"
        android:textColor="@color/colorDarkGrey"
        android:padding="@dimen/activity_padding_small"/>

    <TextView
        android:id="@+id/album_info_fragment_publish_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_detail_publish_date"
        android:textSize="@dimen/base_text_size_small"
        android:textColor="@color/colorDarkGrey"
        android:padding="@dimen/activity_padding_small"/>

    <TextView
        android:id="@+id/album_info_fragment_publish_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_detail_type"
        android:textSize="@dimen/base_text_size_small"
        android:textColor="@color/colorDarkGrey"
        android:padding="@dimen/activity_padding_small"/>

    <TextView
        android:id="@+id/album_info_fragment_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_detail_lang"
        android:textSize="@dimen/base_text_size_small"
        android:textColor="@color/colorDarkGrey"
        android:padding="@dimen/activity_padding_small"/>



    <TextView
        android:id="@+id/album_info_fragment_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_detail_company"
        android:textSize="@dimen/base_text_size_small"
        android:textColor="@color/colorDarkGrey"
        android:padding="@dimen/activity_padding_small"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_detail_produce_title"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/base_text_size"/>
    <TextView
        android:id="@+id/album_info_fragment_content"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/activity_padding"
        android:layout_height="match_parent"/>
</LinearLayout>
